# asciihou

./: .gitignore  Cargo.toml  LICENSE  README.md  credits.md  script.md  ui-design.md
assets/ascii/main_menu/marisa/: black.txt  skin.txt  white.txt  yellow.txt
src/: ascii_animation.rs  lib.rs  main.rs  resource.rs  state.rs  ui.rs
