[package]
name = "asciihou"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy = { version = "0.15.1", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.28.0", features = ["debug-render-2d"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
ron = "0.9.0"
thiserror = "1.0.69"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
